<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LightControl</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="ping">Ping</string>
    <string name="ip_address">IP Address</string>
    <string name="test_connection">Test Connection</string>
    <string name="refresh_ip">Refresh IP</string>
    <string name="channel_dmx">DMX-Channel</string><string name="channel_control">Control-Channel</string><string name="channel">Channel</string><string name="channel_value">Value: </string><string name="button_channel_scan">Scan Channels</string><string name="channel_description">No Channel</string>
    <string name="button_set_channel">Set</string>
    <string name="button_value_0">Aus</string>
    <string name="button_value_255">Ein</string>
    <string name="value">Value</string>
    <string name="connect">connect</string>
    <string name="button_value_127">Mittel</string>
    <string name="offline">offline</string>

</resources>