<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DebugLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|top|left"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioButtonDMX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onSelectChannelTypeClicked"
            android:text="@string/channel_dmx" />

        <RadioButton
            android:id="@+id/radioButtonControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSelectChannelTypeClicked"
            android:text="@string/channel_control" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.38"
            android:ems="10"
            android:hint="@string/channel"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonScanChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSetChannel"
            android:text="@string/button_set_channel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.48"
            android:max="255" />

        <Button
            android:id="@+id/buttonResetValue"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSet0"
            android:text="@string/button_value_0" />

        <Button
            android:id="@+id/buttonSetFullValue"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSet255"
            android:text="@string/button_value_255" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.84"
            android:text="@string/channel" />

        <TextView
            android:id="@+id/channelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.43"
            android:text="@string/channel_description" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.74"
            android:text="@string/value" />

        <TextView
            android:id="@+id/valueText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextScan"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.3"
        android:ems="10"
        android:enabled="true"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onScanChannels"
        android:text="@string/button_channel_scan" />

</LinearLayout>